--- a/server/views/layouts/default.hbs
+++ b/server/views/layouts/default.hbs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>model-level-validations-with-jsonSchema</title>
+  <title>unicorns Yo</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
