--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -12,3 +12,17 @@
   -moz-tab-size: 4;
   tab-size: 4;
 }
+
+body {
+  background-color: bisque;
+}
+
+.main-body {
+  padding-left: 2rem;
+  padding-right: 13rem;
+}
+
+.details {
+  width: 30%;
+  padding-left: 2rem;
+}
